force-app/main/default/objects/Dice_Job_Form__c/Dice_Job_Form__c.object-meta.xml
<CustomObject>
    <label>Dice Job Form</label>
    <nameField>
        <displayFormat>DF- {0}</displayFormat>
        <label>Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dice Job Forms</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>