force-app/main/default/objects/Dice_Job_Form__c/fields/About_Previous_Job__c.field-meta.xml
<CustomField>
    <fullName>About_Previous_Job__c</fullName>
    <label>About Previous Job</label>
    <type>TextArea</type>
</CustomField>