force-app/main/default/objects/Dice_Job_Form__c/fields/Applicant_Status__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Status__c</fullName>
    <label>Applicant Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>