force-app/main/default/objects/Dice_Job_Form__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <defaultValue>&apos;Siva&apos;</defaultValue>
    <inlineHelpText>Dear! User please enter your first name</inlineHelpText>
    <label>First Name</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>