force-app/main/default/objects/Dice_Job_Form__c/fields/Preferred_Country__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Country__c</fullName>
    <label>Preferred Country</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Afghanistan</fullName>
                <default>true</default>
                <label>Afghanistan</label>
            </value>
            <value>
                <fullName>America</fullName>
            </value>
            <value>
                <fullName>Andaman</fullName>
            </value>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>Indonesia</fullName>
            </value>
            <value>
                <fullName>Russia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>