force-app/main/default/objects/Dice_Job_Form__c/fields/PropertyConsultent__c.field-meta.xml
<CustomField>
    <fullName>PropertyConsultent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PropertyConsultent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Dice_Job_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>