force-app/main/default/objects/Dice_Job_Form__c/fields/Salary_Expected__c.field-meta.xml
<CustomField>
    <fullName>Salary_Expected__c</fullName>
    <label>Salary Expected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>