force-app/main/default/objects/Dice_Job_Form__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Preferred_Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Andhara Pradesh</fullName>
            </value>
            <value>
                <fullName>Chicago</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>