force-app/main/default/objects/Dice_Job_Form__c/listViews/Dice_com_Queue_Dice_Job_Form.listView-meta.xml
<ListView>
    <fullName>Dice_com_Queue_Dice_Job_Form</fullName>
    <filterScope>Queue</filterScope>
    <label>Dice.com Queue</label>
    <queue>Dice_com_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>